--- a/_assets/css/_position.scss
+++ b/_assets/css/_position.scss
@@ -5,6 +5,7 @@
   grid-gap: 20px;
 
   .back-button {
+    @include flex-center-align;
     margin: 0 20px;
 
     @include responsive(640px) {
